--- a/src/component/productDetail/productDetail.css
+++ b/src/component/productDetail/productDetail.css
@@ -6,9 +6,30 @@
     padding: 20px;
   }
   
+  .comprar{
+    display: flex;
+    justify-content: space-evenly;
+    border-radius: 10px;
+  }
+
+
+  .carrito{
+    padding: 8px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+  }
+
+  .carrito:hover{
+    padding: 8px;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #2b2bf3;
+    border-radius: 10px;
+  }
   /* Imagen del producto */
   .imagen {
-    max-width: 40%;
+    max-width: 35%;
     height: auto;
     margin-right: 20px;
   }
