--- a/src/component/search/Search.css
+++ b/src/component/search/Search.css
@@ -76,4 +76,9 @@
     padding-left: 20px;
   }
   
-  
+  @media screen and (min-width: 100px) and (max-width: 575px) {
+    .search-container{
+      width: 100%;
+    }
+
+  }
