--- a/src/component/productDetail/productDetail.css
+++ b/src/component/productDetail/productDetail.css
@@ -4,28 +4,33 @@
     flex-direction: row;
     align-items: center;
     padding: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   
   .comprar{
     display: flex;
-    justify-content: space-evenly;
     border-radius: 10px;
+    justify-content: space-around;
   }
 
 
   .carrito{
-    padding: 8px;
-    color: black;
+    padding: 10px;
+    font-size: 108%;
+    border-radius: 8px;
+    background-color: #9eddff83;
     font-family: Arial, Helvetica, sans-serif;
-    border-radius: 10px;
+    box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.247);
+
   }
 
   .carrito:hover{
-    padding: 8px;
-    color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #2b2bf3;
+    padding: 12px;
+    color: #fff;
+    background-color: #007bff;
     border-radius: 10px;
+    border: none;
   }
   /* Imagen del producto */
   .imagen {
@@ -34,6 +39,21 @@
     margin-right: 20px;
   }
   
+  .talles {
+    display: flex;
+    font-size: 16px;
+  }
+  
+  .talles > span {
+    margin-right: 5px; 
+    border: 2px solid rgba(172, 170, 170, 0.349); 
+    border-radius: 4px; 
+    margin-left: 10px;
+    padding: 1px 7px 1px 7px;
+    background-color: rgba(184, 184, 184, 0.76);
+    /* box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.247); */
+    
+  }
   /* Texto de detalles del producto */
   .texto {
     flex-grow: 1;
@@ -64,12 +84,12 @@
 .descripcion {
     font-size: 18px;
     margin: 10px 0;
-    padding: 10px; /* Agregamos un relleno para separar el texto del borde */
-    border: 1px solid #ddd; /* Borde alrededor del área de descripción */
-    background-color: #f7f7f7; /* Fondo gris claro */
-    border-radius: 5px; /* Bordes redondeados */
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2); /* Sombra ligera alrededor del borde */
-    text-align: center; /* Centrar el texto horizontalmente */
+    padding: 10px; 
+    border: 1px solid #ddd; 
+    background-color: #f7f7f7; 
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2); 
+    text-align: left;
+    margin-right: 10%;
   }
   
   
